# Contest

./: .clang-tidy  .gitignore  CMakeLists.txt  run.template  run_windows.template  submission.template  task.template
include/: binary_search.hpp  disjoint_set_union.hpp  io.hpp  misc.hpp  ordered_set.hpp  segment_tree.hpp  strings.hpp  unordered_map.hpp
output/: main.cpp
src/: A.cpp  B.cpp  D.cpp  contest.hpp  disjoint_set_union.cpp  disjoint_set_union.h  misc.cpp  misc.h  segment_tree.cpp  segment_tree.h  segment_tree.hpp  strings.cpp  strings.h  unordered_map.h
testrunner/: main.cpp
tst/: CMakeLists.txt  test_segment_tree.cpp
